fixing linting issues after updating golangci-lint config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,18 +18,27 @@ linters:
     - tparallel
     - unconvert
     - whitespace
+    - godoclint # God o' Clint
   settings:
+    godoclint:
+      enable:
+        - pkg-doc
+        - single-pkg-doc
+        - require-pkg-doc
+        - start-with-name
+        - require-doc
+        - deprecated
+        - max-len
+        - no-unused-link
+      options:
+        max-len:
+          length: 117
     staticcheck:
       checks:
         - all
-        - -SA1029
-        - -ST1000
-        - -ST1003
-        - -ST1016
-        - -ST1020
-        - -ST1021
-        - -ST1022
-        - -ST1023
+        - ST1020
+        - ST1021
+        - ST1022
       initialisms:
         - ACL
         - API
@@ -73,10 +82,6 @@ linters:
         - AMQP
         - DB
         - TS
-      dot-import-whitelist:
-        - github.com/mmcloughlin/avo/build
-        - github.com/mmcloughlin/avo/operand
-        - github.com/mmcloughlin/avo/reg
       http-status-code-whitelist:
         - "200"
         - "400"
@@ -84,6 +89,18 @@ linters:
         - "500"
   exclusions:
     generated: lax
+    rules:
+      # exclude defer resp.Body.Close
+      - linters:
+          - errcheck
+        source: "^\\s*defer\\s+resp?\\.Body\\.Close"
+      # exclude defer tx.Rollback
+      - linters:
+          - errcheck
+        source: "^\\s*defer\\s+tx\\.Rollback"
+      - path: _test\.go$
+        linters:
+          - godoclint
     paths:
       - ^\.(.*)$
       - Dockerfile|Readme.md
@@ -97,8 +114,7 @@ issues:
   fix: true
 formatters:
   enable:
-    - gofmt
-    - goimports
+    - gofumpt
   exclusions:
     generated: lax
     paths:
@@ -110,3 +126,9 @@ formatters:
       - third_party$
       - builtin$
       - examples$
+output:
+  formats:
+    text:
+      colors: true
+      print-issued-lines: true
+      print-linter-name: true
